重构代码