@@ -1,12 +1,12 @@
 # Hive Client memory usage can be an issue if a large number of clients
-# are running at the same time. The flags below have been useful in 
+# are running at the same time. The flags below have been useful in
 # reducing memory usage:
 #
  if [ "$SERVICE" = "cli" ]; then
    if [ -z "$DEBUG" ]; then
-     export HADOOP_OPTS="$HADOOP_OPTS -XX:NewRatio=12 -Xms10m -XX:MaxHeapFreeRatio=40 -XX:MinHeapFreeRatio=15 -XX:+UseParNewGC -XX:-UseGCOverheadLimit"
+     export HADOOP_OPTS="$HADOOP_OPTS -XX:ParallelGCThreads=2 -Xms10m -XX:MaxHeapFreeRatio=40 -XX:MinHeapFreeRatio=15  -XX:-UseGCOverheadLimit"
    else
-     export HADOOP_OPTS="$HADOOP_OPTS -XX:NewRatio=12 -Xms10m -XX:MaxHeapFreeRatio=40 -XX:MinHeapFreeRatio=15 -XX:-UseGCOverheadLimit"
+     export HADOOP_OPTS="$HADOOP_OPTS -XX:ParallelGCThreads=2 -Xms10m -XX:MaxHeapFreeRatio=40 -XX:MinHeapFreeRatio=15 -XX:-UseGCOverheadLimit"
    fi
  fi
 
@@ -15,8 +15,8 @@
 export HADOOP_HEAPSIZE=256
 
 #
-# Larger heap size may be required when running queries over large number of files or partitions. 
-# By default hive shell scripts use a heap size of 256 (MB).  Larger heap size would also be 
+# Larger heap size may be required when running queries over large number of files or partitions.
+# By default hive shell scripts use a heap size of 256 (MB).  Larger heap size would also be
 # appropriate for hive server (hwi etc).
 
 
